--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,18 @@
       <artifactId>allure-testng</artifactId>
       <version>2.29.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
   <build>
